--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,12 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.6.7'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    //mysql
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
+    implementation 'javax.validation:validation-api:2.0.1.Final'
 }
 
 tasks.named('bootBuildImage') {
